[package]
name = "libsimpleservo"
version = "0.1.0"
authors = ["Paul Rouget <me@paulrouget.com>"]
build = "build.rs"

[lib]
name = "simpleservo"
crate-type = ["cdylib"]

[dependencies]
libservo = { git = "https://github.com/servo/servo", rev = "dd6aae9d52" }
libc = "0.2"

[build-dependencies]
gl_generator = "0.5"

